# BorrowChecker

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.github/actions/dioxus-deploy/: action.yml
.github/workflows/: deploy.yml  push_github_page.yml
assets/: bulma.css
deploy/: github_pages.sh
docs/: 404.html
docs/assets/: borrow_checker-0061ef486a3a77ac.js  borrow_checker-0061ef486a3a77ac.js.br  borrow_checker_bg-700a1215554002db.wasm  borrow_checker_bg-700a1215554002db.wasm.br  bulma-5cf773e3af91f4a1.css  bulma-5cf773e3af91f4a1.css.br
src/: lib.rs  main.rs
src/app/: display.rs  frontend.rs  mod.rs  splash.rs  split.rs  storage.rs  ui.rs
src/cli/: arg_parser.rs  display.rs  mod.rs  pattern_parser.rs  utils.rs
src/core/: receipt.rs
src/utils/: mod.rs
