[package]
name = "borrow_checker"
version = "0.1.0"
authors = ["Avinash Mallya <avimallu.github.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6.0", features = ["router"]}
dioxus-free-icons = { version = "0.9", features = ["lucide"] }
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }

#[cfg(target_arch = "wasm32")]
gloo-storage = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
comfy-table = "7.1.4"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
